<?xml version="1.0"?>
<package>
  <name>cyton_gamma_300_controllers</name>
  <version>0.0.0</version>
  <description>The cyton_gamma_300_controllers package</description>
  <maintainer email="tslabinski@slabity.net">Tyler Slabinski</maintainer>
  <license>BSD</license>
  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/cyton_gamma_300_controllers</url> -->
  <author email="andras@bandilabs.com">Fekete Andras</author>
  <author email="tslabinski@slabity.net">Tyler Slabinski</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>dynamixel_motor</run_depend>
</package>
